[package]
name = "my_first_rust_project"
version = "0.1.0"
authors = ["Dave Zuch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
csv = "1.2"
enum-display-derive = "0.1"
ethereum-types = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
